# api-service-train-station

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  data.json  docker-compose.yml  pyproject.toml  requirements.txt
core/: settings.py  urls.py
train_station/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
train_station/migrations/: 0001_initial.py  0002_alter_trip_options_trip_crew_alter_train_cargo_num_and_more.py  0003_alter_crew_options_alter_order_options_and_more.py
train_station/tests/: base_tests.py  test_view.py
user/: apps.py
user/migrations/: 0001_initial.py
user/tests/: test_user.py
