[tool.poetry]
name = "api-train-station"
version = "0.1.0"
description = ""
authors = ["Vladyslav Kucherenko <vlados.soc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.3"
pillow = "^11.0.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
drf-spectacular = "^0.28.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
black = "^24.10.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
